# cmake_example

./: .gitignore  CMakeLists.txt
MathFunctions/: MathFunctions.h  mysqrt.cpp
examples/: CMakeLists.txt  assimp_example.cpp  glfw_example.cpp  scene.cpp  scene.h  tutorial.cpp
shaders/: fragmentShader.fs  vertexShader.vs
